--- a/app/src/main/res/layout/earthquake_activity.xml
+++ b/app/src/main/res/layout/earthquake_activity.xml
@@ -4,4 +4,6 @@
     android:id="@+id/quake_list_view"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    android:dividerHeight="0dp"
+    android:divider="@null"/>
