--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,7 +7,9 @@
     android:paddingEnd="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingStart="16dp">
+    android:paddingStart="16dp"
+    android:background="?android:attr/selectableItemBackground"
+    android:id="@+id/container">
 
     <TextView
         android:id="@+id/quake_magnitude"
