--- a/app/src/main/res/layout/earthquake_activity.xml
+++ b/app/src/main/res/layout/earthquake_activity.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/quake_list_view"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:dividerHeight="0dp"
-    android:divider="@null"/>
+    android:layout_width="match_parent">
+
+    <ListView
+        android:id="@+id/quake_list_view"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:dividerHeight="0dp"
+        android:divider="@null"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:layout_centerInParent="true"
+        android:id="@+id/empty_view"/>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:id="@+id/progress_bar"/>
+
+</RelativeLayout>
